infra/gitops/prod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: group-5-prod
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: kbazaar-api
          image: ghcr.io/kbtg-kampus-classnest-se-java/workshop-group-5:342b25a526f325f284259db8f71d8c866b2b527d
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
